# synthia-superdesign

./: .env.example  AGENT_ONBOARDING.md  AI_STUDIO_SUMMARY.md  CLAUDE.md  STUDIO_MANIFEST.md  VIDEO_PRODUCTION_SETUP.md  WHY_THIS_WORKS.md  deploy.sh  docker-compose.yml  nginx.conf  package.json  system-prompt.txt
.claude/: settings.json
.claude/projects/: clone-skill-context.json
.claude/skills/: clone.md
.github/workflows/: beads-checkpoint.yml  ci.yml  deploy-hostinger.yml  deploy-railway-preview.yml  docker-publish.yml  lighthouse.yml  quality-gate.yml  secret-rotation-reminder.yml  semver-tag.yml
apps/api/: main.py
apps/mcp/: server.py
apps/web/: .env.local.example  .gitignore  Dockerfile  next.config.ts  package.json  tailwind.config.ts
migration/: 00_repo_inventory.md  01_logic_graph.md  02_duplicate_report.md  05_studio_runtime_journal.md  open-questions.md
rust/: Cargo.toml  README.md
rust/bridges/: Cargo.toml
rust/bridges/src/: lib.rs
rust/cli/: Cargo.toml
rust/cli/src/: main.rs
rust/graph-tools/: Cargo.toml
rust/graph-tools/src/: lib.rs
rust/indexers/: Cargo.toml
rust/indexers/src/: lib.rs
rust/mcp/: Cargo.toml
rust/mcp/src/: lib.rs
rust/parsers/: Cargo.toml
rust/parsers/src/: lib.rs
rust/sync-tools/: Cargo.toml
rust/sync-tools/src/: lib.rs
rust/validators/: Cargo.toml
rust/validators/src/: lib.rs
skills/land-the-plane/: SECRETS.md  lighthouse-budget.json
studio/agents/: AGENT_ROLES.md  AGENT_VIDEO_PRODUCTION.md
studio/anti-patterns/: registry.yaml
studio/commercial/: CHECKOUT_OPTIONS.md  (+3 more)
(+88 files in other folders)
