[workspace]
resolver = "2"
members = [
    "cli",
    "mcp",
    "bridges",
    "validators",
    "indexers",
    "parsers",
    "graph-tools",
    "sync-tools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["The Pauli Effect"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
axum = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
