[package]
name = "cynthia-cli"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
